few components created, tried to add date filter with no luck

--- a/app/elements/elements.html
+++ b/app/elements/elements.html
@@ -36,7 +36,8 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 <link rel="import" href="../bower_components/paper-toast/paper-toast.html">
 <link rel="import" href="../bower_components/paper-toolbar/paper-toolbar.html">
 
-
+<!-- 3rd party elements -->
+<link rel="import" href="../bower_components/moment-element/moment-element.html">
 
 <!-- Uncomment next block to enable Service Worker Support (2/2) -->
 <!--
@@ -50,3 +51,6 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 <!-- Add your elements here -->
 <link rel="import" href="../styles/app-theme.html">
 <link rel="import" href="../styles/shared-styles.html">
+<link rel="import" href="TZ-main/TZ-main.html">
+<link rel="import" href="TZ-main-list/TZ-main-list.html">
+
