--- a/app/elements/elements.html
+++ b/app/elements/elements.html
@@ -54,3 +54,6 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 <link rel="import" href="TZ-main/TZ-main.html">
 <link rel="import" href="TZ-main-list/TZ-main-list.html">
 
+<link rel="import" href="TZ-sidemenu/TZ-sidemenu.html">
+<link rel="import" href="TZ-userlist/TZ-userlist.html">
+<link rel="import" href="TZ-menu/TZ-menu.html">
