--- a/app/index.html
+++ b/app/index.html
@@ -81,46 +81,19 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
           <div>SIDEMENU</div>
         </paper-toolbar>
         <div>
-          <paper-item>Item</paper-item>
-          <paper-item>Item</paper-item>
-          <paper-item>Item</paper-item>
-          <paper-item>Item</paper-item>
-          <paper-item>Item</paper-item>
-          <paper-item>Item</paper-item>
+          <TZ-sidemenu></TZ-sidemenu>
         </div>
       </paper-header-panel>
       <paper-header-panel main>
         <paper-toolbar>
           <paper-icon-button icon="menu" paper-drawer-toggle></paper-icon-button>
           <div class="title">Team Zeus</div>
-          <paper-menu-button paper-menu-button  horizontal-align="right" horizontal-offset="20" vertical-align="top" vertical-offset="50">
-            <paper-icon-button icon="apps" class="dropdown-trigger" alt="main menu"></paper-icon-button>
-
-            <paper-menu class="dropdown-content">
-              <paper-item>
-                <iron-icon icon="communication:chat"></iron-icon>
-                Chat
-              </paper-item>
-              <paper-item>
-                <iron-icon icon="perm-contact-calendar"></iron-icon>
-                Calendar
-              </paper-item>
-              <paper-item>
-                <iron-icon icon="social:people"></iron-icon>
-                People
-              </paper-item>
-            </paper-menu>
-          </paper-menu-button>
+         <TZ-menu></TZ-menu>
         </paper-toolbar>
         <div>
           <paper-drawer-panel id="panel2" right-drawer narrow responsive-width="1919px">
             <div drawer style="overflow-y: auto; overflow-x: hidden;">
-              <paper-toolbar>
-                <div>Users List</div>
-              </paper-toolbar>
-              Something <br/>
-              Something <br/>
-              Something <br/>
+              <TZ-userList></TZ-userList>
             </div>
             <section main class="flex" style="overflow-y: auto; overflow-x: hidden; height: 100%;" >
               <TZ-main></TZ-main>
