--- a/app/elements/elements.html
+++ b/app/elements/elements.html
@@ -26,6 +26,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 <link rel="import" href="../bower_components/paper-button/paper-button.html">
 <link rel="import" href="../bower_components/paper-menu-button/paper-menu-button.html">
 <link rel="import" href="../bower_components/paper-item/paper-item.html">
+<link rel="import" href="../bower_components/paper-item/paper-icon-item.html">
 <link rel="import" href="../bower_components/paper-input/paper-input.html">
 <link rel="import" href="../bower_components/paper-material/paper-material.html">
 <link rel="import" href="../bower_components/paper-menu/paper-menu.html">
@@ -53,7 +54,6 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 <link rel="import" href="../styles/shared-styles.html">
 <link rel="import" href="TZ-main/TZ-main.html">
 <link rel="import" href="TZ-main-list/TZ-main-list.html">
-
 <link rel="import" href="TZ-sidemenu/TZ-sidemenu.html">
 <link rel="import" href="TZ-userlist/TZ-userlist.html">
 <link rel="import" href="TZ-menu/TZ-menu.html">
